# streamdeck-oxide

./: .gitignore  Cargo.toml  LICENSE  README.md
example/: README.md
example/src/: main.rs
examples/plugins/: Cargo.toml  README.md
examples/plugins/src/: main.rs
examples/simple/: Cargo.toml
examples/simple/src/: main.rs
src/: error.rs  lib.rs  navigation.rs  plugins.rs  run.rs  theme.rs
src/button/: mod.rs  render.rs  types.rs
src/view/: button.rs  customizable.rs  manager.rs  matrix.rs  mod.rs
